--- a/src/helpers/Loader/Loader.module.css
+++ b/src/helpers/Loader/Loader.module.css
@@ -35,9 +35,10 @@
 
 .overlay{
    position: absolute;
-   height:90%;
-   width:100%;
+   height:90vh;
+   width:100vw;
    background-color: rgba(0, 0, 0, 0.045);
+   z-index:999999;
 }
 
 @-webkit-keyframes rotation {
